<resources>
    <string name="app_name">Dimey</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="auth_front_text">Look like you haven’t registered yet, or maybe you forgot to Login fam...</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Pass">Password</string>
    <string name="loginTitle">Login Here</string>
    <string name="login_btn">Login\n</string>
    <string name="loginPreLink">Doesn\'t have an account?</string>
    <string name="loginLink">Register here</string>

    <string name="register_btn">Register</string>
    <string name="registerPreLink">Already have an account?</string>
    <string name="registerLink">Login here</string>
    <string name="registerTitle">Register Now</string>
    <string name="name">Name</string>
</resources>