<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="82dp"
        android:layout_marginTop="220dp"
        android:text="@string/auth_front_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Login_btn"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/auth_btn"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="258dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Register_btn"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register"
            android:textColor="@color/black"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/auth_btn"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="258dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>