<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <TextView
        android:id="@+id/registerTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/registerTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_bg"
        android:layout_width="313dp"
        android:layout_height="386dp"
        android:background="@color/auth_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/registerName_edt"
            app:layout_constraintEnd_toEndOf="@+id/registerName_edt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/registerName_edt" />

        <com.seloaziz.dimey.customView.NameEdit
            android:id="@+id/registerName_edt"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/edt_bg"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/registerEmail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            app:layout_constraintBottom_toTopOf="@+id/registerEmail_edt"
            app:layout_constraintEnd_toEndOf="@+id/registerEmail_edt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/registerEmail_edt" />

        <com.seloaziz.dimey.customView.EmailEdit
            android:id="@+id/registerEmail_edt"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edt_bg"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerName_edt"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/registerPass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pass"
            app:layout_constraintBottom_toTopOf="@+id/registerPass_edt"
            app:layout_constraintEnd_toEndOf="@+id/registerPass_edt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/registerPass_edt" />

        <com.seloaziz.dimey.customView.PasswordEdit
            android:id="@+id/registerPass_edt"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/edt_bg"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmail_edt"
            app:layout_constraintVertical_bias="0.652"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="218dp"
            android:layout_height="51dp"
            android:backgroundTint="@color/loginRegister_btn"
            android:gravity="center"
            android:text="@string/register_btn"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="276dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="52dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="117dp" />

        <TextView
            android:id="@+id/registerPreLink_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/registerPreLink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/registerLink_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/registerLink"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>